<resources>
    <string name="app_name">hangangmongttang</string>
    <string name="app_name_korean">한강몽땅</string>

    <string name="splash_copyright">Copyright 2019. YOUNG-JOY-TEAM All Rights Reserved.</string>

    <string name="nickname">닉네임</string>
    <string name="password">비밀번호</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>

    <string name="app_key">8b61fd803ff0a037f8f790ed0482a4f0</string>
    <string name="image_viewer">TODO</string>
    <string name="info_title">광나루 어린이 야구장</string>
    <string name="info_address">서울특별시 송파구 풍납동 118-8</string>
    <string name="info_content">광나루 한강공원에 위치해있는 어린이 야구장이다.</string>
    <string name="info_reserve_button">예약</string>
    <string name="info_text">정보</string>
    <string name="confirm_park_info">공원 정보 확인하기</string>
    <string name="review_text">리뷰</string>
    <string name="add_review_text">리뷰 작성</string>
    <string name="review_hint">리뷰를 작성해 주세요</string>
    <string name="cancel_review">정말 나가시겠습니까?</string>
    <string name="empty_review">내용을 입력해주세요!</string>
    <string name="no_review">리뷰가 존재하지 않습니다</string>

    <string name="weather_error">날씨 정보를 불러올 수 없습니다</string>
    <string name ="dust_grade1">미세먼지</string>
    <string name ="dust_grade2">초미세먼지</string>
    <string name="gwangnaru_park">광나루 한강공원</string>
    <string name="todays_info">Today\'s Info</string>
    <string name="todays_weather">오늘의 날씨</string>

    <string name="map_balloon_state_title">[실시간 정보]</string>
    <string name="notice_title">공지사항</string>

    <string name="entertain_info">공원 이용할 때 지켜야 할 사항</string>
    <string name="entertain_info_content">1.지정된 관찰로만 이용하기\n2.애완동물과 동반할 때 목줄 매기
        \n3.나물 채취하지 않기\n4.금연하기\n5.취사하지 않기\n6.쓰레기 되가져가기(위반 시 과태료 10만원)
        \n7.자전거, 인라인 천천히 타기\n8.시설물 깨끗이 사용하기\n9.오토바이 타고 들어오지 않기
        \n10.큰 소리로 소리치거나 이야기하지 않기\n11.그늘막 이용 시 설치 허용기준 준수(위반 시 과태료 300만원 이내)</string>
    <string name="athletic_info">시설물 이용요금</string>
    <string name="athletic_info_content">족구장 : 2시간당 4,000원\n체력단련 기구 사용 : 무료
        \n자전거 대여료\n  - 1인용 : 3,000원/시간 (15분 초과시마다 500원 추가)\n  - 2인용 : 6,000원/시간 (15분 초과시마다 1,000원 추가)
        \n주차요금 : 승용차 10,000원/일 (월정기권 : 50,000원)\n녹화/촬영
        \n  - 녹화 : 1시간당 26,000원 (초과시간당 13,000원)\n  - 영화촬영 : 주간 - 1회당 130,000원 야간은 주간의 2배</string>
    <string name="facility_reserve">시설물 예약하기</string>
    <string name="facility_reserve_link">http://yeyak.seoul.go.kr/</string>

    <string name="app_version">현재 버전 1.0.0</string>
    <string name="app_notice">공지사항</string>
    <string name="app_feedback">피드백 보내기</string>
    <string name="app_open_source">오픈소스 라이센스</string>
    <string name="app_feedback_hint">여러분의 피드백은 큰 힘이 됩니다!</string>

    <string name="pwd_alert">비밀번호: </string>
    <string name="alert_title">수정/삭제</string>
</resources>
